--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,42 @@
-RewriteEngine On
+#Options -Indexes
 
-# Redirect mobile devices (including tablets)
-RewriteCond %{HTTP_USER_AGENT} "android|avantgo|blackberry|bolt|boost|cricket|docomo|fone|hiptop|mini|mobi|palm|phone|pie|tablet|up\.browser|up\.link|webos|wos|iPhone|iPad|Windows Phone|Samsung|Mobile|Android" [NC]
-RewriteRule ^$ /mobile/ [L,R=301]
+# compress text, html, javascript, css, xml:
+AddOutputFilterByType DEFLATE text/html
+AddOutputFilterByType DEFLATE text/plain
+AddOutputFilterByType DEFLATE text/xml
+AddOutputFilterByType DEFLATE text/css
+AddOutputFilterByType DEFLATE text/javascript
+AddOutputFilterByType DEFLATE application/javascript
+AddOutputFilterByType DEFLATE application/xhtml+xml
+AddOutputFilterByType DEFLATE application/xml
+AddOutputFilterByType DEFLATE application/rss+xml
+AddOutputFilterByType DEFLATE application/atom_xml
+AddOutputFilterByType DEFLATE application/x-javascript
+AddOutputFilterByType DEFLATE application/x-httpd-php
+AddOutputFilterByType DEFLATE application/x-httpd-fastphp
+AddOutputFilterByType DEFLATE application/x-httpd-eruby
+AddOutputFilterByType DEFLATE image/svg+xml
 
-# Redirect tablets to the desktop version (optional)
-RewriteCond %{HTTP_USER_AGENT} "iPad" [NC]
-RewriteRule ^$ / [L,R=301]
+# remove browser bugs
+BrowserMatch ^Mozilla/4 gzip-only-text/html
+BrowserMatch ^Mozilla/4\.0[678] no-gzip
+BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
+Header append Vary User-Agent
+
+# Or, compress certain file types by extension:
+<files *>
+	SetOutputFilter DEFLATE
+</files>
+
+#RewriteEngine   On
+#RewriteBase     /
+#RewriteCond     %{REQUEST_URI} !^(/index\.php|/img|/js|/css|/robots\.txt|/favicon\.ico)
+#RewriteCond     %{REQUEST_FILENAME} !-f
+#RewriteCond     %{REQUEST_FILENAME} !-d
+#RewriteRule     .               /index.php              [L]
+
+# Disable server signature
+ServerSignature Off
+#ModPagespeedUseExperimentalJsMinifier on
+
+php_value max_input_vars 3000
