--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "angular": "^1.2.32",
-    "gulp": "^5.0.0"
+    "gulp": "^5.0.0",
+    "ng-dialog": "^1.4.0"
   },
   "name": "htdocs",
   "version": "1.0.0",
